--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -26,10 +26,4 @@ workflows:
     version: 2
     build_and_test:
         jobs:
-            - build-and-push-docker-image:
-                filters:
-                    branches:
-                        only:
-                            - master
-                            - release
-                            - /^stage.+/
+            - build-and-push-docker-image
