--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,7 +2,7 @@ version: 2
 jobs:
     build-and-push-docker-image:
         docker:
-            - image: circleci/ubuntu
+            - image: circleci/ubuntu-14.04-XXL-1325-0ccc9ce
         steps:
             - checkout
             - setup_remote_docker
