add endpoint of healthcheck

--- a/.nginx/.conf
+++ b/.nginx/.conf
@@ -16,6 +16,10 @@ http {
             alias /usr/src/app/build_v2;
         }
 
+        location /healthcheck {
+			return 200 "hello";
+		}
+
         include /etc/nginx/mime.types;
     }
 }
