--- a/.nginx/.conf
+++ b/.nginx/.conf
@@ -5,21 +5,24 @@ events {
 http {
     server {
         listen 8000;
+        include /etc/nginx/mime.types;
 
-        root /;
+        absolute_redirect off;
 
-        location /api-v1 {
-            alias /usr/src/app/build_v1;
+        location /v1 {
+            alias /usr/src/app/v1;
         }
 
-        location /api-v2 {
-            alias /usr/src/app/build_v2;
+        location /v2 {
+            alias /usr/src/app/v2;
+        }
+
+        location / {
+            root /usr/src/app/docs;
         }
 
         location /healthcheck {
-			return 200 "hello";
-		}
-
-        include /etc/nginx/mime.types;
+            return 200 "hello";
+        }
     }
 }
