--- a/.nginx/.conf
+++ b/.nginx/.conf
@@ -10,15 +10,15 @@ http {
         absolute_redirect off;
 
         location /v1 {
-            alias /usr/src/app/v1;
+            alias /usr/src/api-docs/v1;
         }
 
         location /v2 {
-            alias /usr/src/app/v2;
+            alias /usr/src/api-docs/v2;
         }
 
         location / {
-            root /usr/src/app/docs;
+            root /usr/src/api-docs/docs;
         }
 
         location /healthcheck {
