elasticio-41 Nginx tuning

--- a/.nginx/.conf
+++ b/.nginx/.conf
@@ -1,12 +1,19 @@
 pid /tmp/nginx.pid;
 
+worker_processes 1;
 events {
     worker_connections  2048;
 }
 
 http {
     server_tokens off;
-     
+
+    client_max_body_size 2k; 
+    client_body_timeout 8s;
+    client_header_timeout 8s;
+    keepalive_timeout 5 5;
+    send_timeout 8s;
+
     server {
         listen 8000;
         include /etc/nginx/mime.types;
