--- a/docs/openapi-spec/elasticio_RESTAPI.yaml
+++ b/docs/openapi-spec/elasticio_RESTAPI.yaml
@@ -4,7 +4,7 @@ info:
   description: |
     # Introduction
 
-    Welcome to the {{product_name}} [REST](http://en.wikipedia.org/wiki/Representational_State_Transfer) API documentation v2. It adheres to the [JSON API](http://jsonapi.org) specifications:
+    Welcome to the [REST](http://en.wikipedia.org/wiki/Representational_State_Transfer) API documentation v2. It adheres to the [JSON API](http://jsonapi.org) specifications:
 
     * Returns JSON-encoded responses (Content-Type: `application/json`),
     * Uses standard HTTP [response codes](#errors)
