--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -21,9 +21,26 @@ jobs:
             - run:
                 name: Pushing Branched Docker Image
                 command: docker push elasticio/api-docs:${CIRCLE_BRANCH}
-
+    tag_release:
+        docker:
+          - image: circleci/node:12.19.1-stretch
+        steps:
+            - checkout
+            - setup_remote_docker:
+                docker_layer_caching: true
+            - run:
+                name: Tag release image
+                command: tag_release.sh
 workflows:
     version: 2
     build_and_test:
         jobs:
             - build-and-push-docker-image
+    tag_docker:
+        jobs:
+          - tag_release:
+              filters:
+                branches:
+                  ignore: /.*/
+                tags:
+                  only: /^[0-9]{2}\.[0-9]{2}(\.[0-9]+)?$/
