--- a/docs/openapi-spec/elasticio_RESTAPI.yaml
+++ b/docs/openapi-spec/elasticio_RESTAPI.yaml
@@ -43,7 +43,7 @@ paths:
   /users/me:
     get:
       tags:
-        - Users
+        - users
       summary: Retrieve your user
       responses:
         '200':
