--- a/components/schemas/secret-sch.yaml
+++ b/components/schemas/secret-sch.yaml
@@ -232,6 +232,13 @@ credentialOauth2Object:
       type: string
       description: Auth secret scope
       example: https://www.googleapis.com/auth/spreadsheets
+    fields:
+      type: object
+      description: If component has OAuthFieldView in component.json you can define additional fields in auth-secret for storing data
+      properties:
+         base_url:
+           type: string
+           example: https://example.com
 credentialOtherObject:
   type: object
   example: '{ "login":"somelogin", "key":"somekey"}'
