--- a/components/schemas/tenant-sch.yaml
+++ b/components/schemas/tenant-sch.yaml
@@ -1174,10 +1174,15 @@ tenantAttributes:
             Enable component whitelisting on contract level. Default: "false"
           example: true
         enabled_totp:
-          type: string
+          type: boolean
           description:  |
             Enable ability to use two-factor authentication. Default: "false"
           example: true
+        forced_totp:
+          type: boolean
+          description:  |
+            Enforce users to setup two-factor authentication. Requires `attributes.feature_flags.enabled_totp` to be enabled. Default: "false"
+          example: true        
     signin_v_2:
       type: object
       description: Enable new design for registration page
