--- a/package.json
+++ b/package.json
@@ -1,5 +1,44 @@
 {
-  "dependencies": {
-    "cors": "^2.8.5"
-  }
+    "name": "api-docs",
+    "version": "0.0.1",
+    "description": "Elastic.io API Documentation",
+    "main": "dist/app.js",
+    "scripts": {
+        "audit": "better-npm-audit audit --level high --production",
+        "pretest": "npm run lint",
+        "build": "./node_modules/.bin/tsc && cp docs/openapi.yaml dist/openapi.yaml",
+        "start": "node ./dist/src/app.js",
+        "lint": "node_modules/.bin/eslint -c ./.eslintrc.js --no-eslintrc --ext .ts ."
+    },
+    "license": "UNLICENSED",
+    "private": true,
+    "dependencies": {
+        "@elastic.io/bunyan-logger": "1.0.9",
+        "bunyan": "1.8.12",
+        "express": "4.17.0",
+        "json-refs": "3.0.15",
+        "nconf": "0.12.0",
+        "swagger-ui-express": "4.2.0",
+        "yamljs": "0.3.0"
+    },
+    "devDependencies": {
+        "@types/bunyan": "1.8.6",
+        "@types/express": "4.16.1",
+        "@types/nconf": "0.10.0",
+        "@types/node": "12.0.2",
+        "@types/swagger-ui-express": "3.0.1",
+        "@types/yamljs": "0.2.30",
+        "@typescript-eslint/eslint-plugin": "1.13.0",
+        "@typescript-eslint/parser": "1.13.0",
+        "better-npm-audit": "3.7.3",
+        "eslint": "5.16.0",
+        "eslint-config-standart": "0.2.0",
+        "eslint-plugin-mocha": "5.3.0",
+        "eslint-plugin-node": "8.0.0",
+        "eslint-plugin-promise": "4.2.1",
+        "eslint-plugin-security": "^1.4.0",
+        "eslint-plugin-standard": "4.0.0",
+        "ts-node": "7.0.1",
+        "typescript": "3.4.5"
+    }
 }
